2010-08-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Clean up the non-compositing code with equivalent transformations.

	* src/home/hd-render-manager.h (STATE_IS_NON_COMP):
	  Added.
	* src/home/hd-render-manager.c:
	  Added hd_render_manager_switch_to_composited_state().
	  Use STATE_IS_NON_COMP().
	* src/mb/hd-comp-mgr.canager.c:
	  Use them.
	* src/mb/hd-comp-mgr.canager.c:
	  Use them.
	* src/mb/hd-comp-mgr.canager.c (hd_comp_mgr_unredirect_topmost_client):
	  Removed some dead code.
	* src/mb/hd-comp-mgr.canager.c (hd_comp_mgr_client_looks_better_composited):
	  Removed as unnecessary.  Reworked hd_comp_mgr_client_prefers_compositing().

2010-08-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Remove some dead code.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_portrait_forecast):
	  Taken over by lp_forecast().
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Debug prints.

2010-08-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (create_stampfile):
	  Don't insist on it in scratchbox.

2010-08-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#184265 Front camera gets disabled automatically on tapping
		  a missed call notification during a video call

	* src/launcher/hd-app-mgr.c (hd_app_mgr_activate):
	  Don't relaunch if the current application is the requested one.
	* src/home/hd-switcher.c (hd_switcher_relaunch_app):
	  Don't postpone zooming in if already in tasw.


2010-08-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Create STAMP_DIR when creating STAMP_FILE, and try again
	  if failed.

2010-07-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.140-1.

2010-07-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#162343 Possible memory leak in hildon-desktop

	* src/mb/hd-decor.c (hd_decor_remove_actors):
	  Don't leak them.

2010-06-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#165009 Device not responding if Done button is tapped in layout mode
